--- a/src/proton.scss
+++ b/src/proton.scss
@@ -41,5 +41,10 @@
   "styles/_text-editor-light",
   "styles/_text-editor-shadow",
   "styles/_text",
-  "styles/_utilities"
+  "styles/_utilities",
+  "styles/_nav",
+  "styles/_modal",
+  "styles/_progress",
+  "styles/_tabs",
+  "styles/_tooltips"
   ;
